--- a/UnitTests/packages.config
+++ b/UnitTests/packages.config
@@ -2,10 +2,15 @@
 <packages>
   <package id="AutoFixture" version="3.12.1" targetFramework="net40" />
   <package id="AutoFixture.AutoFakeItEasy" version="3.12.1" targetFramework="net40" />
+  <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="FakeItEasy" version="1.13.1" targetFramework="net40" />
+  <package id="FluentAssertions" version="2.1.0.0" targetFramework="net45" />
   <package id="FluentSecurity" version="2.0.0" targetFramework="net40" />
   <package id="FluentSecurity.TestHelper" version="2.0.0" targetFramework="net40" />
   <package id="FluentValidation" version="5.0.0.1" targetFramework="net45" />
+  <package id="GenericRepository" version="0.3.1-pre01" targetFramework="net45" />
+  <package id="GenericRepository.EF" version="0.3.1-pre01" targetFramework="net45" />
+  <package id="GenericRepository.EntityFramework" version="0.3.1-pre01" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.WebPages" version="2.0.30506.0" targetFramework="net40" />
