--- a/src/FluentsecurityDemo/Web.config
+++ b/src/FluentsecurityDemo/Web.config
@@ -1,5 +1,4 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <!--
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
@@ -7,14 +6,15 @@
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    <section name="entityFramework"
-             type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089"
-             requirePermission="false" />
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <appSettings>
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="MvcSiteMapProvider_IncludeAssembliesForScan" value="FluentsecurityDemo" />
+    <add key="MvcSiteMapProvider_UseExternalDIContainer" value="false" />
+    <add key="MvcSiteMapProvider_ScanAssembliesForSiteMapNodes" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
@@ -29,31 +29,24 @@
         <add namespace="System.Web.Mvc.Html" />
         <add namespace="System.Web.Routing" />
         <add namespace="System.Web.WebPages" />
+        <add namespace="MvcSiteMapProvider.Web.Html" />
+        <add namespace="MvcSiteMapProvider.Web.Html.Models" />
       </namespaces>
     </pages>
     <httpRuntime targetFramework="4.5" />
     <profile defaultProvider="DefaultProfileProvider">
       <providers>
-        <add name="DefaultProfileProvider"
-             type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-             connectionStringName="DefaultConnection" applicationName="/" />
+        <add name="DefaultProfileProvider" type="System.Web.Providers.DefaultProfileProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </profile>
     <membership defaultProvider="DefaultMembershipProvider">
       <providers>
-        <add name="DefaultMembershipProvider"
-             type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-             connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true"
-             requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5"
-             minRequiredPasswordLength="5" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
-             applicationName="/" />
+        <add name="DefaultMembershipProvider" type="System.Web.Providers.DefaultMembershipProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false" maxInvalidPasswordAttempts="5" minRequiredPasswordLength="5" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10" applicationName="/" />
       </providers>
     </membership>
     <roleManager defaultProvider="DefaultRoleProvider">
       <providers>
-        <add name="DefaultRoleProvider"
-             type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-             connectionStringName="DefaultConnection" applicationName="/" />
+        <add name="DefaultRoleProvider" type="System.Web.Providers.DefaultRoleProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" applicationName="/" />
       </providers>
     </roleManager>
     <!--
@@ -64,20 +57,22 @@
       -->
     <sessionState mode="InProc" customProvider="DefaultSessionProvider">
       <providers>
-        <add name="DefaultSessionProvider"
-             type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-             connectionStringName="DefaultConnection" />
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="DefaultConnection" />
       </providers>
     </sessionState>
   </system.web>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
+    <modules>
+      <remove name="UrlRoutingModule-4.0" />
+      <add name="UrlRoutingModule-4.0" type="System.Web.Routing.UrlRoutingModule" />
+    </modules>
   </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -85,7 +80,6 @@
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
   </entityFramework>
   <connectionStrings>
-    <add name="DefaultConnection" providerName="System.Data.SqlClient"
-         connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-FluentsecurityDemo-20130827232530;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-FluentsecurityDemo-20130827232530.mdf" />
+    <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-FluentsecurityDemo-20130827232530;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-FluentsecurityDemo-20130827232530.mdf" />
   </connectionStrings>
 </configuration>
