--- a/src/MvcDemos/packages.config
+++ b/src/MvcDemos/packages.config
@@ -12,6 +12,8 @@
   <package id="jquery-globalize" version="0.1.1" targetFramework="net40" />
   <package id="Microsoft.AspNet.Mvc" version="4.0.20710.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="1.0.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Providers" version="1.1" targetFramework="net40" />
+  <package id="Microsoft.AspNet.Providers.Core" version="1.0" targetFramework="net40" />
   <package id="Microsoft.AspNet.Razor" version="2.0.20715.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="4.0.20710.0" targetFramework="net45" />
@@ -23,6 +25,12 @@
   <package id="Microsoft.jQuery.Unobtrusive.Validation" version="2.0.30506.0" targetFramework="net40" />
   <package id="Microsoft.Net.Http" version="2.0.20710.0" targetFramework="net45" requireReinstallation="True" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="MvcInstaller.MVC4" version="1.1.1.1" targetFramework="net40" />
+  <package id="MvcMailer" version="4.0" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="4.5.11" targetFramework="net45" />
+  <package id="SecurityGuard.MVC4" version="1.0.10" targetFramework="net40" />
+  <package id="System.Web.Providers" version="1.2" targetFramework="net40" />
+  <package id="T4Scaffolding" version="1.0.8" targetFramework="net40" />
+  <package id="T4Scaffolding.Core" version="1.0.0" targetFramework="net40" />
   <package id="WebGrease" version="1.3.0" targetFramework="net45" />
 </packages>
